LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contact__c/VENDOR_Contact__c.object-meta.xml
<CustomObject>
    <description>Vendor Contacts represent points of contact with the vendor. These may be Sales, Customer Success, or Delivery in the case of consulting services.</description>
    <label>Vendor Contact</label>
    <nameField>
        <label>Vendor Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>