LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contact__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - A summary of the relationship with this contact.</description>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>