LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The email address of the contact.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>