LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contact__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The last name of the contact.</description>
    <label>Last Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>