LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contact__c/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The LI Profile for the contact.</description>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>