LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The direct phone for this contact.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>