LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contact__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The title of the contact.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>