LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contact__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The vendor for this contact.</description>
    <label>Vendor</label>
    <referenceTo>VENDOR__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>